- post and get readers - register tags scan
